if( WIN32 )
	list(APPEND GAME_SOURCES
		"${CMAKE_CURRENT_SOURCE_DIR}/wingameicon.o"
	)
endif()
list(APPEND GAME_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/init.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/sound.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/sound_game.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/collision.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/light.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/maps.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/cursors.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/draw.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/opengl.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/objects.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/list.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/files.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/items.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/paths.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/charclass.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/net.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/game.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/stat.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/acttorch.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actplayer.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actmonster.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actitem.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/acthudweapon.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actgold.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actgib.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actgeneral.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actdoor.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actladder.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/item_usage_funcs.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/entity.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/messages.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actflame.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actcampfire.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actfountain.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actsink.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_rat.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_goblin.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_slime.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_human.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_scorpion.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_succubus.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_troll.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_shopkeeper.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_skeleton.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_minotaur.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_ghoul.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_demon.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_spider.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_lich.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_imp.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_gnome.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_devil.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_automaton.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_cockatrice.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_crystalgolem.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_goatman.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_incubus.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_insectoid.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_kobold.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_lichfire.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_lichice.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_scarab.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_shadow.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_vampire.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/shops.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/mechanisms.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actgate.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actchest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actsprite.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/menu.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/savepng.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actarrow.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actarrowtrap.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actboulder.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actheadstone.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actthrown.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actbeartrap.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actspeartrap.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actwallbuster.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/book.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/init_game.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/prng.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/scores.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/steam.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/player.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/entity_shared.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/stat_shared.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/item_tool.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actsummontrap.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actpowercrystal.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/monster_shared.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actpedestal.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/actteleporter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/actmagictrap.cpp"
)

if( WIN32 )
	list(APPEND EDITOR_SOURCES
		"${CMAKE_CURRENT_SOURCE_DIR}/wineditoricon.o"
	)
endif()
list(APPEND EDITOR_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/init.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/light.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/buttons.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/cursors.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/draw.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/opengl.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/objects.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/entity_editor.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/list.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/files.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/editor.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/sound.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/entity_shared.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/stat_editor.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/stat_shared.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/items_editor.cpp"
)

add_subdirectory(magic)
add_subdirectory(interface)

set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)
set(EDITOR_SOURCES ${EDITOR_SOURCES} PARENT_SCOPE)
